# bitsender

./: .gitignore  README.md  bitsender.py  pyproject.toml  requirements.txt  ru.README.md
configurations/: example.config.yaml  ru.example.config.yaml
core/: commands.py  services.py
