[tool.poetry]
name = "bitsender"
version = "0.1.0"
description = ""
authors = ["exelay <exelay.rapik@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
bit = "^0.7.2"
PyYAML = "^5.4.1"
cleo = "^0.8.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
